--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,7 +2,9 @@ version: '3.8'
 
 services:
     web:
-        build: ./services/web
+        build:
+            context: ./services/web
+            dockerfile: Dockerfile.prod
         command: gunicorn --bind 0.0.0.0:5000 manage:app
         ports:
             - 1342:5000
@@ -16,6 +18,11 @@ services:
             - postgres_data_prod:/var/lib/postgresql/data/
         env_file:
             - ./.env.prod.db
-
+    nginx:
+        build: ./services/nginx
+        ports:
+            - 1337:80
+        depends_on:
+            - web                  
 volumes:
     postgres_data_prod:
