--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,8 +6,10 @@ services:
             context: ./services/web
             dockerfile: Dockerfile.prod
         command: gunicorn --bind 0.0.0.0:5000 manage:app
-        ports:
-            - 1342:5000
+        volumes:
+            - static_volume:/home/app/web/project/static
+        expose:
+            - 5000
         env_file:
             - ./.env.prod
         depends_on:
@@ -20,9 +22,12 @@ services:
             - ./.env.prod.db
     nginx:
         build: ./services/nginx
+        volumes:
+            - static_volume:/home/app/web/project/static
         ports:
-            - 1337:80
+            - 1342:80
         depends_on:
             - web                  
 volumes:
     postgres_data_prod:
+    static_volume:
